--- a/Login/css/estilos.css
+++ b/Login/css/estilos.css
@@ -11,7 +11,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	items-align: center;
+	align-items: center;
 }
 
 .login.imagen {
